; ModuleID = '/home/carl/AnghaBench/curl/lib/extr_pingpong.c_Curl_pp_init.c'
source_filename = "/home/carl/AnghaBench/curl/lib/extr_pingpong.c_Curl_pp_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pingpong = type { i32, i32, i32, i64, %struct.connectdata* }
%struct.connectdata = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }

@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Curl_pp_init(%struct.pingpong* %0) #0 {
  %2 = alloca %struct.pingpong*, align 8
  %3 = alloca %struct.connectdata*, align 8
  store %struct.pingpong* %0, %struct.pingpong** %2, align 8
  %4 = load %struct.pingpong*, %struct.pingpong** %2, align 8
  %5 = getelementptr inbounds %struct.pingpong, %struct.pingpong* %4, i32 0, i32 4
  %6 = load %struct.connectdata*, %struct.connectdata** %5, align 8
  store %struct.connectdata* %6, %struct.connectdata** %3, align 8
  %7 = load %struct.pingpong*, %struct.pingpong** %2, align 8
  %8 = getelementptr inbounds %struct.pingpong, %struct.pingpong* %7, i32 0, i32 3
  store i64 0, i64* %8, align 8
  %9 = load %struct.connectdata*, %struct.connectdata** %3, align 8
  %10 = getelementptr inbounds %struct.connectdata, %struct.connectdata* %9, i32 0, i32 0
  %11 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.pingpong*, %struct.pingpong** %2, align 8
  %16 = getelementptr inbounds %struct.pingpong, %struct.pingpong* %15, i32 0, i32 2
  store i32 %14, i32* %16, align 8
  %17 = load i32, i32* @TRUE, align 4
  %18 = load %struct.pingpong*, %struct.pingpong** %2, align 8
  %19 = getelementptr inbounds %struct.pingpong, %struct.pingpong* %18, i32 0, i32 1
  store i32 %17, i32* %19, align 4
  %20 = call i32 (...) @Curl_now()
  %21 = load %struct.pingpong*, %struct.pingpong** %2, align 8
  %22 = getelementptr inbounds %struct.pingpong, %struct.pingpong* %21, i32 0, i32 0
  store i32 %20, i32* %22, align 8
  ret void
}

declare dso_local i32 @Curl_now(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
